--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "type": "module",
   "description": "Api robusta para gestion de ingegracion de socios y empresas para feria Interfer",
   "dependencies": {
-    "coperex": "file:",
     "argon2": "^0.41.1",
+    "coperex": "file:",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
